Cleaned up description and style

--- a/OnTheFlipSide-GooglePlay.html
+++ b/OnTheFlipSide-GooglePlay.html
@@ -2,19 +2,34 @@
 <html>
    <head>
       <title>On The Flip Side -Google Play</title>
-      <meta http-equiv = "refresh" content = "3; url = https://play.google.com/store/apps/details?id=com.GoochNCogswell.TimeShiftGame" />
+      <meta http-equiv = "refresh" content = "1; url = https://play.google.com/store/apps/details?id=com.GoochNCogswell.TimeShiftGame" />
 	  
 	  <!-- OG meta tags that improve the look of your post on social media -->
 	  <meta property="og:site_name" content="Rusted Delusion Studios" /><!--website name-->
 	  <meta property="og:site" content="rusteddelusion.com/OnTheFlipSide-GooglePlay" /> <!--website link-->
 	  <meta property="og:title" content="On The Flip Side for Google Play"/> <!--Post title-->
-	  <meta property="og:description" content="Are you ready to take a dive on The Flip Side?" /> <!--Post description-->
+	  <meta property="og:description" content="Get ready to take a dive On The Flip Side. Feel the electric blues in this endless runner that will throw you back into the retro and never let go with endless replay-ability." /> <!--Post description-->
 	  <meta property="og:image" content="images/OTFS_100x500.jpg" /><!-- Image link (jpg only)-->
 	  <meta property="og:url" content="https://rusteddelusion.com/OnTheFlipSide-GooglePlay/" /> <!--where do you want your post to link to-->
 	  <meta property="og:type" content="game" />
-
+       
+	       <!-- STYLES -->
+   	 <!-- Bootstrap -->
+    	<link href="css/bootstrap.min.css" rel="stylesheet">
+    	<!-- FontAwesome -->
+    	<link href="css/all.min.css" rel="stylesheet">
+    	<!-- Animations -->
+    	<link href="css/animations.css" rel="stylesheet">
+    	<!-- Lightbox -->
+    	<link href="css/lightbox.min.css" rel="stylesheet">
+    	<!-- Video Lightbox -->
+    	<link href="css/modal-video.min.css" rel="stylesheet">
+    	<!-- Main Stylesheet -->
+    	<link href="css/style.css" rel="stylesheet">
    </head>
    <body>
-      <p>Redirecting to On The Flip Side for Google Play</p>
+      <div class="col-md-11 small-margin>
+      	<p class="small-margin">Redirecting to On The Flip Side for Google Play. Get Ready...</p>
+      </div>
    </body>
 </html>
