Made the redirect page prettier

--- a/OnTheFlipSide-GooglePlay.html
+++ b/OnTheFlipSide-GooglePlay.html
@@ -8,7 +8,7 @@
 	  <meta property="og:site_name" content="Rusted Delusion Studios" /><!--website name-->
 	  <meta property="og:site" content="rusteddelusion.com/OnTheFlipSide-GooglePlay" /> <!--website link-->
 	  <meta property="og:title" content="On The Flip Side for Google Play"/> <!--Post title-->
-	  <meta property="og:description" content="Get ready to take a dive On The Flip Side. Feel the electric blues in this endless runner that will throw you back into the retro and never let go with endless replay-ability." /> <!--Post description-->
+	  <meta property="og:description" content="Get ready to take a dive On The Flip Side. Feel the electric blues in this endless runner that will throw you back into the retro groove and never let go with endless replay-ability." /> <!--Post description-->
 	  <meta property="og:image" content="images/OTFS_100x500.jpg" /><!-- Image link (jpg only)-->
 	  <meta property="og:url" content="https://rusteddelusion.com/OnTheFlipSide-GooglePlay/" /> <!--where do you want your post to link to-->
 	  <meta property="og:type" content="game" />
@@ -28,8 +28,28 @@
     	<link href="css/style.css" rel="stylesheet">
    </head>
    <body>
-      <div class="col-md-11 small-margin>
-      	<p class="small-margin">Redirecting to On The Flip Side for Google Play. Get Ready...</p>
-      </div>
+    <header id="main-header">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
+            <div class="container">
+                <!-- Site Logo -->
+                <a id="logo" class="navbar-brand" href="#"><img class="img-fluid" src="images/logo.png" alt="site logo"></a>            
+            </div>
+        </nav>
+    </header><!-- Header End -->
+    <div id="container-404" class="container-fluid">
+        <div class="row-fluid">
+            <div class="col-md-12 text-center text-404">
+                <h2>Redirecting to</h2>
+				<p><br></p>
+				<img src="images/OTFS_Redirect.png" data-src="images/OTFS_Redirect.png" align="middle">
+				<p><br></p>
+				<h3>for Google Play</h3>
+                <h3><span class="colored2">Get </span><span class="colored1">R</span><span class="colored2">eady...</span></h3>
+                <a href="https://play.google.com/store/apps/details?id=com.GoochNCogswell.TimeShiftGame" class="button">Not loading? Click here.</a>
+            </div>
+        </div>
+    </div>
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
    </body>
 </html>
