Added additional meta tags for Twitter. Used full url for meta image.

--- a/OnTheFlipSide-GooglePlay.html
+++ b/OnTheFlipSide-GooglePlay.html
@@ -9,9 +9,11 @@
 	  <meta property="og:site" content="rusteddelusion.com/OnTheFlipSide-GooglePlay" /> <!--website link-->
 	  <meta property="og:title" content="On The Flip Side for Google Play"/> <!--Post title-->
 	  <meta property="og:description" content="Get ready to take a dive On The Flip Side. Feel the electric blues in this endless runner that will throw you back into the retro groove and never let go with endless replay-ability." /> <!--Post description-->
-	  <meta property="og:image" content="images/OTFS_100x500.jpg" /><!-- Image link (jpg only)-->
+	  <meta property="og:image" content="https://rusteddelusion.com/images/OTFS_100x500.jpg" /><!-- Image link (jpg only)-->
 	  <meta property="og:url" content="https://rusteddelusion.com/OnTheFlipSide-GooglePlay/" /> <!--where do you want your post to link to-->
 	  <meta property="og:type" content="game" />
+	  <meta name="twitter:card" content="summary_large_image">
+	  <meta name="twitter:image:alt" content="On The Flip Side for Google Play">
        
 	       <!-- STYLES -->
    	 <!-- Bootstrap -->
