Should now check to see if it can open the Google Play app

--- a/OnTheFlipSide-GooglePlay.html
+++ b/OnTheFlipSide-GooglePlay.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>On The Flip Side -Google Play</title>
-      <meta http-equiv = "refresh" content = "1; url = https://play.google.com/store/apps/details?id=com.GoochNCogswell.TimeShiftGame" />
+      <meta http-equiv = "refresh" content = "1; url = https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.GoochNCogswell.TimeShiftGame" />
 	  
 	  <!-- OG meta tags that improve the look of your post on social media -->
 	  <meta property="og:site_name" content="Rusted Delusion Studios" /><!--website name-->
