Added the same redirect to the button

--- a/OnTheFlipSide-GooglePlay.html
+++ b/OnTheFlipSide-GooglePlay.html
@@ -48,7 +48,7 @@
 				<p><br></p>
 				<h3>for Google Play</h3>
                 <h3><span class="colored2">Get </span><span class="colored1">R</span><span class="colored2">eady...</span></h3>
-                <a href="https://play.google.com/store/apps/details?id=com.GoochNCogswell.TimeShiftGame" class="button">Not loading? Click here.</a>
+                <a href="https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.GoochNCogswell.TimeShiftGame" class="button">Not loading? Click here.</a>
             </div>
         </div>
     </div>
