Changed URL name so that it is more flexible if we release on iOS

--- a/PlayOnTheFlipSide.html
+++ b/PlayOnTheFlipSide.html
@@ -10,7 +10,7 @@
 	  <meta property="og:title" content="On The Flip Side for Google Play"/> <!--Post title-->
 	  <meta property="og:description" content="Take a dive On The Flip Side. Feel the electric blues in this endless runner that will throw you back into the retro groove." /> <!--Post description-->
 	  <meta property="og:image" content="https://rusteddelusion.com/images/OTFS_Redirect_Meta.jpg" /><!-- Image link (jpg only)-->
-	  <meta property="og:url" content="https://rusteddelusion.com/OnTheFlipSide-GooglePlay/" /> <!--where do you want your post to link to-->
+	  <meta property="og:url" content="https://rusteddelusion.com/PlayOnTheFlipSide/" /> <!--where do you want your post to link to-->
 	  <meta property="og:type" content="game" />
 	  <meta name="twitter:card" content="summary">
 	  <meta name="twitter:site" content="@RustedDelusion" />
@@ -46,7 +46,6 @@
 				<p><br></p>
 				<img src="images/OTFS_Redirect.png" data-src="images/OTFS_Redirect.png" align="middle">
 				<p><br></p>
-				<h3>for Google Play</h3>
                 <h3><span class="colored2">Get </span><span class="colored1">R</span><span class="colored2">eady...</span></h3>
                 <a href="https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.GoochNCogswell.TimeShiftGame" class="button">Not loading? Click here.</a>
             </div>
