Added video, fixed link, and a modal for extra info

--- a/index.html
+++ b/index.html
@@ -187,67 +187,40 @@
             <div class="games-portfolio ">
                 <!-- Game Card -->
                 <div class="row game-card mobile">
-                    <div class="col-lg-12 col-xl-5 game-card-left">
-                        <a href="images/OTFS_ExamplePic1.png" data-lightbox="screenshots_dark">
-                            <div class="overlay">
-                                <i class="far fa-images fa-3x"></i>
-                            </div>
-                            <picture>
-                                <source media="(min-width: 1200px)" srcset="images/OTFS_SmallGameImage.jpg">
-                                <source media="(min-width: 768px)" srcset="images/OTFS_100x500.jpg">
-                                <img src="images/placeholder.jpg" data-src="images/OTFS_SmallGameImage.jpg" class="img-fluid b-lazy" alt="aurora image">
-                            </picture>
-                        </a>
-                        <a href="images/OTFS_ExamplePic2.png" data-lightbox="screenshots_dark"></a>
-                        <a href="images/OTFS_ExamplePic3.png" data-lightbox="screenshots_dark"></a>
-                    </div>
+                    <div class="modal-body">
+						<iframe class="modal-vid" src="https://www.youtube.com/embed/2voINzoGEhE" allowfullscreen></iframe>
+					</div>
                     <div class="col-lg-12 col-xl-7 game-card-right">
                         <h2 class="short-hr-left">ON THE FLIP SIDE</h2>
                         <p class="tags"><span class="subtle">Arcade | Mobile</span></p>
-                        <p class="game-description">Old is new again in this funky foot tapping endless runner for mobile. Tap to change the world around you, all while corporate manifestations try to bring you down. Are you ready to flip to the other side?</p>
+                        <p class="game-description">Old is new again in this funky foot tapping endless runner for mobile. Tap to change the world around you, all while corporate manifestations try to bring you down. Are you ready to flip to the other side? <span class="expand colored1 strong" data-toggle="modal" data-target="#game1">Read More</span></p>
                         <a href='#' target="_blank" rel="noopener noreferrer">
-					    <img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' width="220" height="90"/>
+					    <a href="https://play.google.com/store/apps/details?id=com.GoochNCogswell.TimeShiftGame"><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' width="220" height="90"/></a>
 						</a>
-						<!--
-                        <a href="#" class="button-store">
-                            <i class="#"></i>
-                            <p>Available on<br><span class="strong">Apple Store</span></p>
-                       </a>
-
-                        <div class="rating">
-                            <p class="strong">4.1</p>
-                            <ul>
-                                <li><i class="#"></i></li>
-                                <li><i class="#"></i></li>
-                                <li><i class="#"></i></li>
-                                <li><i class="#"></i></li>
-                                <li><i class="#"></i></li>
-                            </ul>
-                        </div>
-						-->
                     </div>
                     <!-- Modal -->
-                    <div class="modal fade game-modal" id="game4" tabindex="-1" role="dialog" aria-labelledby="echo" aria-hidden="true">
+                    <div class="modal fade game-modal" id="game1" tabindex="-1" role="dialog" aria-labelledby="echo" aria-hidden="true">
                         <div class="modal-dialog modal-lg" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h1 class="modal-title" id="echo">ECHO - DARK ADVENTURES</h1>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
                                <div class="modal-body">
-                                   <iframe class="modal-vid" src="https://www.youtube.com/embed/73vSguCeJl0?rel=0&amp;showinfo=0" allowfullscreen></iframe>
-                                   <h2 class="short-hr-left">EXPLORE AN EXPANSIVE WORLD</h2>
-                                   <p>Integer eget diam felis. Quisque et aliquet lectus, et lacinia turpis. Praesent eget pretium orci. Sed vestibulum rutrum volutpat. Curabitur feugiat arcu odio, quis convallis eros laoreet ac.</p>
-                                   <img class="img-fluid" src="images/game_large.jpg" alt="screenshot">
+                                   <iframe class="modal-vid" src="https://www.youtube.com/embed/2voINzoGEhE" allowfullscreen></iframe>
+                                   <h2 class="short-hr-left">ARE YOU READY TO TAKE A DIVE ON THE FLIP SIDE?</h2>
+                                   <p>The world is monochrome and ready to take every ounce of jazz out of your spirit, but you're not going to let it. Fly free in this endless run of electro fun for Google Play.</p>
+                                   <img class="img-fluid" src="images/OTFS_ExamplePic1.png" alt="screenshot">
                                    <br>
-                                   <h2 class="short-hr-left">GET IMMERSED IN A FANTASTIC STORY</h2>
-                                   <p>Suspendisse ultricies, dui vitae convallis blandit, ipsum sem mattis diam, in egestas arcu lacus sed lectus. Donec at interdum tellus. Quisque pellentesque a felis et rutrum. Donec condimentum magna sit amet viverra convallis. Fusce accumsan efficitur orci a commodo.</p>
-                                   <img class="img-fluid" src="images/game_large.jpg" alt="screenshot">
+                                   <h2 class="short-hr-left">ELECTRO BLUES ASTHETIC</h2>
+                                   <p>Feeling rife for the retro life? Let On The Flip Side take you for a ride down memory lane, full of mechanical chunk, auditory funk, and enough junk in the trunk to keep you going for days.</p>
+                                   <img class="img-fluid" src="images/OTFS_ExamplePic2.png" alt="screenshot">
                                    <br>
-                                   <h2 class="short-hr-left">ADAPT AND DEVELOP YOUR CHARACTER</h2>
-                                   <p>Mauris at sapien nibh. Integer id tellus vitae ante cursus pharetra. Vestibulum ultrices eleifend enim, quis maximus nibh dapibus in. Phasellus lacinia nec leo at semper. Duis nisl odio, lacinia quis dui at, pretium tincidunt metus. Maecenas condimentum purus sit amet neque maximus tempor. Proin eros massa, ullamcorper eget rutrum eu, feugiat id purus.</p>
+                                   <h2 class="short-hr-left">CORPORATE JUNCTION</h2>
+                                   <p>You are not alone, as 4 unique stop motion bosses are here to feed on your deepest fears. Bounce back and show them that you wont take any of their fill of buzz kill!</p>
+								    <img class="img-fluid" src="images/OTFS_ExamplePic3.png" alt="screenshot">
+                                   <br>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="button secondary" data-dismiss="modal">Close</button>
@@ -255,7 +228,8 @@
                             </div>
                         </div>
                     </div>
-                </div><!-- Game Card End -->
+                </div>
+				<!-- Game Card End -->
             </div>
         </div>
 		
