--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:site_name" content="Rusted Delusion Studios" /><!--website name-->
     <meta property="og:site" content="rusteddelusion.com" /> <!--website link-->
     <meta property="og:title" content="Rusted Delusion Studios"/> <!--Post title-->
-    <meta property="og:description" content="We make it Different. We make it Personal." /> <!--Post description-->
+    <meta property="og:description" content="We make games Different. We make games Personal." /> <!--Post description-->
     <meta property="og:image" content="images/FullLogo.png" /><!-- Image link (jpg only)-->
     <meta property="og:url" content="https://rusteddelusion.com/" /> <!--where do you want your post to link to-->
     <meta property="og:type" content="game" />
@@ -94,7 +94,7 @@
         <div class="row hero-unit">
             <div class="container">
                 <div class="hero-caption"><!-- Main Tagline -->
-                    <h1>We make it <span class="colored2">D</span>ifferent<br> We make it <span class="colored1">P</span>ersonal</h1>
+                    <h1>We make games <span class="colored2">D</span>ifferent<br> We make games <span class="colored1">P</span>ersonal</h1>
                 </div>
             </div>
         </div>
